2007-09-24  Bruno coudoin  <bruno.coudoin@free.fr>

	-  Major little change. Now all the images get the focus went the mouse enter it's bounding
	   box and not when it's on a non transparent area.
	   It's sometimes hard to click on images when they have transparent area in them.
	   Please make a test to check there are no side effects to this change.

	* src/libgnomecanvas/gnome-canvas-pixbuf.c(gnome_canvas_pixbuf_point): commit 3048


2007-09-24  Bruno coudoin  <bruno.coudoin@free.fr>

	- Created the Brazil map by Elisa de Castro Guerra (commit 3042)

	* boards/geography_country/Makefile.am:
	* boards/geography_country/board7_0.xml.in:
	* po/POTFILES.in:
	* boards/geography_country/brazil/*.png

2007-09-23  Bruno coudoin  <bruno.coudoin@free.fr>

	- Fixed/Hacked to have missing dependancies from libgnomecanvas
	  appearing at the dynamic load of the python binding.
	* src/gcompris/gcompris.c: (main):

2007-09-23  Bruno coudoin  <bruno.coudoin@free.fr>

	- Fixed to compile out of tree.

	* src/boards/Makefile.am:
	* src/gcompris/Makefile.am:

2007-09-23  Bruno coudoin  <bruno.coudoin@free.fr>

	- MAJOR FIX by Hans de Goede: the focus IS now given to GCompris when in fullscreen
	  with xvidmode.
	* src/gcompris/gcompris.c: (gc_fullscreen_set), (main):

2007-09-22  Bruno coudoin  <bruno.coudoin@free.fr>

	- Added Breton sounds created by Alan Monfort free fr and Victoire.
	* boards/voices/br/*

	- MAJOR FIX: the focus was not given to GCompris when in fullscreen
	  with xvidmode.
	* src/gcompris/gcompris.c (gc_fullscreen_set):
 	  removed call to gdk_window_set_override_redirect

2007-09-14  Bruno coudoin  <bruno.coudoin@free.fr>

	Fixed web site generation, improved it's documentation

	* docs/spip_oneboard.xsl:
	* docs/gcompris2spip.pl:

	- Removed require on gtk-pixbuf as it's already required by GTK.

2007-09-13  Bruno coudoin  <bruno.coudoin@free.fr>

	- Patch by Hans de Goede j w r degoede hhs nl