@@ -61,7 +61,7 @@ my %sections = (
 		"da", 37,
 		"de", 54,
 		"dz", 0,
-		"el", 0,
+		"el", 222,
 		"en", 2,
 		"en_CA", 0,
 		"en_GB", 0,
@@ -129,7 +129,7 @@ my %rubriques = (
 		 "da", 61,
 		 "de", 64,
 		 "dz", 0,
-		 "el", 0,
+		 "el", 223,
 		 "en", 12,
 		 "en_CA", 0,
 		 "en_GB", 0,
@@ -198,7 +198,7 @@ my %rubriques_all = (
 		 "da", 62,
 		 "de", 65,
 		 "dz", 0,
-		 "el", 0,
+		 "el", 224,
 		 "en", 68,
 		 "en_CA", 0,
 		 "en_GB", 0,
