@@ -1,3 +1,7 @@
+2007-09-28  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	* docs/gcompris2spip.pl: added greek translation for the web site.
+
 2007-09-24  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	-  Major little change. Now all the images get the focus went the mouse enter it's bounding
